# 2Dto3D-MCP

./: .dockerignore  Dockerfile  README.md  mcp_server.py  mcp_tool.py  pyproject.toml  requirements.txt  smithery.yaml
