[project]
name = "3d-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.2.5",
    "mapbox-earcut>=1.0.3",
    "mcp[cli]>=1.6.0",
    "numpy>=2.2.5",
    "open3d>=0.19.0",
    "opencv-python>=4.11.0.86",
    "shapely>=2.1.0",
]
